--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,8 @@ main .main-logo img{
     height: 92px;
     width: 272px;
 }
+main .main-input{
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
